# SMART

./: .gitignore  LICENSE  README.md  requirements.txt
data/: download.sh
data/Features/: idx_image_id_mapping.json
output/: TensorBoard.sh
output/Analysis/: Best_results.ipynb  Best_results.py  analsys.py
output/Analysis/utils/: tsv_file.py
pretrained_models/: download_models.sh
src/: README.md  pyproject.toml  setup.py
src/smart/: __init__.py  run.sh  run_bag.py  run_once.sh
src/smart/datasets/: __init__.py  dataset_clever.py  dataset_smart.py  dataset_utils.py  finetune_dataset.py  simple_dataset.py
src/smart/extractor/: Caption_Blip2.py  test.py
src/smart/modeling/: __init__.py  modeling_attention.py  modeling_bert.py  modeling_clever.py  modeling_smart.py  modeling_utils.py
src/smart/modeling/pytorch_transformers/: convert_gpt2_checkpoint_to_pytorch.py  convert_openai_checkpoint_to_pytorch.py  convert_tf_checkpoint_to_pytorch.py  convert_transfo_xl_checkpoint_to_pytorch.py  convert_xlm_checkpoint_to_pytorch.py  convert_xlnet_checkpoint_to_pytorch.py
src/smart/modeling/pytorch_transformers/tests/: modeling_bert_test.py  modeling_common_test.py  modeling_gpt2_test.py  modeling_openai_test.py  modeling_transfo_xl_test.py  modeling_xlm_test.py  modeling_xlnet_test.py  optimization_test.py  tokenization_bert_test.py  tokenization_gpt2_test.py  tokenization_openai_test.py  tokenization_transfo_xl_test.py  tokenization_utils_test.py  tokenization_xlm_test.py  tokenization_xlnet_test.py
src/smart/utils/: cbs.py  initizer.py  optimizer.py
(+11 files in other folders)
